# zone

./: .gitattributes  .gitignore  0001-add-npu-support-and-paimon-sft.patch  README.md  cosyvoice_npu_patch.diff  pyproject.toml  server.py  vibecoding_zone.md
examples/: demo.md  demo.mm.json  os_demo.md  os_demo.mm.json
mindmap/: __init__.py  __main__.py
mindmap/application/: __init__.py  services.py
mindmap/convert/: __init__.py  markdown.py
mindmap/domain/: __init__.py  mindmap.py  node.py  style.py
mindmap/layout/: __init__.py  balanced_tree.py  contract.py
mindmap/presentation/: __init__.py  cli.py
mindmap/rendering/: __init__.py  svg.py  theme.py
mindmap/storage/: __init__.py  json_repository.py  repository.py
mindmap/ui/: api.js  app.js  index.html  interact.js  renderer.js  style.css
tests/: __init__.py  test_cli.py  test_domain.py  test_editing.py  test_layout.py  test_markdown.py  test_rendering.py  test_storage.py  test_style.py
